# server

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  audit.toml  deny.toml
.github/workflows/: ci.yml  nightly.yml  sytest.yml
.sqlx/: README.md
crates/vauxl-admin/: Cargo.toml
crates/vauxl-crypto/: Cargo.toml
crates/vauxl-crypto/src/: error.rs  identity.rs  kem.rs  lib.rs
crates/vauxl-federation/: Cargo.toml
crates/vauxl-identity/: Cargo.toml
crates/vauxl-matrix/: Cargo.toml
crates/vauxl-media/: Cargo.toml
crates/vauxl-push/: Cargo.toml
crates/vauxl-server/: Cargo.toml
docker/: compose.dev.yml
docs/: MVP_CHECKLIST.md
migrations/: 001_initial_schema.sql
scripts/: check.sh  db-init-local.sh
