[package]
name    = "vauxl-crypto"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
vodozemac       = "0.7"
x25519-dalek    = { version = "2", features = ["static_secrets"] }
ed25519-dalek   = "2"
sha2            = "0.10"
hkdf            = "0.12"
zeroize         = { version = "1", features = ["derive"] }
pqcrypto-kyber  = "0.8"
pqcrypto-traits = "0.3"
thiserror       = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
