[package]
name    = "vauxl-matrix"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
tokio     = { workspace = true }
axum      = { workspace = true }
sqlx      = { workspace = true }
ruma      = { workspace = true }
serde     = { workspace = true }
tracing   = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
